[gd_scene load_steps=70 format=3 uid="uid://c170vx72m3820"]

[ext_resource type="Script" path="res://scripts/winner.gd" id="1_bbyg0"]
[ext_resource type="Texture2D" uid="uid://c27iae42lp2ie" path="res://images/game_over.png" id="2_rwnn1"]
[ext_resource type="Texture2D" uid="uid://bf8dranglgl4a" path="res://images/Shifu/Character_07-idle_00.png" id="3_bupfb"]
[ext_resource type="Texture2D" uid="uid://cleva0j2jwg0g" path="res://images/Shifu/Character_07-idle_01.png" id="4_cx2p6"]
[ext_resource type="Texture2D" uid="uid://dig3q5doqsyr7" path="res://images/Shifu/Character_07-idle_02.png" id="5_i84tw"]
[ext_resource type="Texture2D" uid="uid://c5bddkdmuywas" path="res://images/Shifu/Character_07-idle_03.png" id="6_0g5oy"]
[ext_resource type="Texture2D" uid="uid://h8xluspb62a4" path="res://images/Shifu/Character_07-idle_04.png" id="7_bwf1g"]
[ext_resource type="Texture2D" uid="uid://degw0b0g0qfjq" path="res://images/Shifu/Character_07-idle_05.png" id="8_c6t3f"]
[ext_resource type="Texture2D" uid="uid://ba2x1a55pmu2g" path="res://images/Shifu/Character_07-idle_06.png" id="9_2vyft"]
[ext_resource type="Texture2D" uid="uid://3fuia8mtul52" path="res://images/Shifu/Character_07-idle_07.png" id="10_hvwnd"]
[ext_resource type="Texture2D" uid="uid://bw61vc2qokgbm" path="res://images/Shifu/Character_07-idle_08.png" id="11_bkhty"]
[ext_resource type="Texture2D" uid="uid://clukj4xud4lap" path="res://images/Shifu/Character_07-idle_09.png" id="12_qc5n2"]
[ext_resource type="Texture2D" uid="uid://cdab7un6v1ph2" path="res://images/Shifu/Character_07-idle_10.png" id="13_o5aik"]
[ext_resource type="Texture2D" uid="uid://bfad1hx78nmxi" path="res://images/Shifu/Character_07-idle_11.png" id="14_0w4aj"]
[ext_resource type="Texture2D" uid="uid://bwr0chvojunu2" path="res://images/Shifu/Character_07-idle_12.png" id="15_xcs6a"]
[ext_resource type="Texture2D" uid="uid://cxr5ttil5jir8" path="res://images/Shifu/Character_07-idle_13.png" id="16_0hyc8"]
[ext_resource type="Texture2D" uid="uid://47rbgptgndhc" path="res://images/Shifu/Character_07-idle_14.png" id="17_063ww"]
[ext_resource type="Texture2D" uid="uid://2mp3o6j6phsn" path="res://images/Shifu/Character_07-idle_15.png" id="18_ayd77"]
[ext_resource type="Texture2D" uid="uid://caevqi5f76uas" path="res://images/Shifu/Character_07-idle_16.png" id="19_vilcq"]
[ext_resource type="Texture2D" uid="uid://dsoxgumbl6ew5" path="res://images/Shifu/Character_07-idle_17.png" id="20_cwj26"]
[ext_resource type="Texture2D" uid="uid://t4pdmhme5lqe" path="res://images/Shifu/Character_07-idle_18.png" id="21_bj3d2"]
[ext_resource type="Texture2D" uid="uid://bqjkas1td1shc" path="res://images/Shifu/Character_07-idle_19.png" id="22_8yr31"]
[ext_resource type="Texture2D" uid="uid://b24wfpunts1tm" path="res://images/Shifu/Character_07-idle_20.png" id="23_1uwl2"]
[ext_resource type="Texture2D" uid="uid://b32vcbug2dlbv" path="res://images/Shifu/Character_07-idle_21.png" id="24_d0dwp"]
[ext_resource type="Texture2D" uid="uid://hwnksv1fdnh8" path="res://images/Shifu/Character_07-idle_22.png" id="25_6lnl3"]
[ext_resource type="Texture2D" uid="uid://dfb4vy1ap42sw" path="res://images/Shifu/Character_07-idle_23.png" id="26_y2lf1"]
[ext_resource type="Texture2D" uid="uid://rrulp2vlote8" path="res://images/Shifu/Character_07-idle_24.png" id="27_nk822"]
[ext_resource type="Texture2D" uid="uid://sufscsdp2n2c" path="res://images/Shifu/Character_07-idle_25.png" id="28_wxfcc"]
[ext_resource type="Texture2D" uid="uid://b4oqgmsstijgm" path="res://images/Shifu/Character_07-idle_26.png" id="29_lln0a"]
[ext_resource type="Texture2D" uid="uid://dg3qjeljwojb6" path="res://images/Shifu/Character_07-idle_27.png" id="30_fjjt7"]
[ext_resource type="Texture2D" uid="uid://5fws1atvossq" path="res://images/Shifu/Character_07-idle_28.png" id="31_vluad"]
[ext_resource type="Texture2D" uid="uid://q34lncbles4i" path="res://images/Shifu/Character_07-idle_29.png" id="32_u6gyv"]
[ext_resource type="Texture2D" uid="uid://bcusf4xgrpata" path="res://images/Shifu/Character_07-idle_30.png" id="33_bnd3h"]
[ext_resource type="Texture2D" uid="uid://cclxd1ac1h6d4" path="res://images/Shifu/Character_07-idle_31.png" id="34_afuob"]
[ext_resource type="Texture2D" uid="uid://c46xhlnbfy2cx" path="res://images/Shifu/Character_07-idle_32.png" id="35_16e1h"]
[ext_resource type="Texture2D" uid="uid://ba21mijll7ayr" path="res://images/Shifu/Character_07-idle_33.png" id="36_pyrpc"]
[ext_resource type="Texture2D" uid="uid://dxkrm57aenpis" path="res://images/Shifu/Character_07-idle_34.png" id="37_ve4gf"]
[ext_resource type="Texture2D" uid="uid://cwrhavxl7bamb" path="res://images/Shifu/Character_07-idle_35.png" id="38_ap80e"]
[ext_resource type="Texture2D" uid="uid://bk5phig8iigms" path="res://images/Shifu/Character_07-idle_36.png" id="39_a64sk"]
[ext_resource type="Texture2D" uid="uid://psghnhue1pg8" path="res://images/Shifu/Character_07-idle_37.png" id="40_biuhv"]
[ext_resource type="Texture2D" uid="uid://cbptbbtoan0ab" path="res://images/Shifu/Character_07-idle_38.png" id="41_5jxax"]
[ext_resource type="Texture2D" uid="uid://vgtbn63xtoot" path="res://images/Shifu/Character_07-idle_39.png" id="42_p15iw"]
[ext_resource type="Texture2D" uid="uid://m6o8x5koeyml" path="res://images/Shifu/Character_07-idle_40.png" id="43_h1reu"]
[ext_resource type="Texture2D" uid="uid://e1dcbgo5ygbp" path="res://images/Shifu/Character_07-idle_41.png" id="44_e6nk7"]
[ext_resource type="Texture2D" uid="uid://dw5pqapsgqic6" path="res://images/Shifu/Character_07-idle_42.png" id="45_nci8u"]
[ext_resource type="Texture2D" uid="uid://f2ydaur4k75" path="res://images/Shifu/Character_07-idle_43.png" id="46_mwerx"]
[ext_resource type="Texture2D" uid="uid://bm8xr3ph8q4tm" path="res://images/Shifu/Character_07-death_00.png" id="47_sihbj"]
[ext_resource type="Texture2D" uid="uid://cjld44t5n5a47" path="res://images/Shifu/Character_07-death_01.png" id="48_82bgk"]
[ext_resource type="Texture2D" uid="uid://d1s36xn3sw6c2" path="res://images/Shifu/Character_07-death_02.png" id="49_fdsig"]
[ext_resource type="Texture2D" uid="uid://bqr08xgqq43w6" path="res://images/Shifu/Character_07-death_03.png" id="50_5spoq"]
[ext_resource type="Texture2D" uid="uid://cl0ttrehxhx5" path="res://images/Shifu/Character_07-death_04.png" id="51_o3xip"]
[ext_resource type="Texture2D" uid="uid://c6f4lpu4yqmpl" path="res://images/Shifu/Character_07-death_05.png" id="52_mynug"]
[ext_resource type="Texture2D" uid="uid://bhuqpndxhvayc" path="res://images/Shifu/Character_07-death_06.png" id="53_rq34w"]
[ext_resource type="Texture2D" uid="uid://dx1kc80eagnqg" path="res://images/Shifu/Character_07-death_07.png" id="54_3r7kv"]
[ext_resource type="Texture2D" uid="uid://dp68mej784wbj" path="res://images/Shifu/Character_07-death_08.png" id="55_p7v2j"]
[ext_resource type="Texture2D" uid="uid://btbgws4onk5k5" path="res://images/Shifu/Character_07-death_09.png" id="56_2s1vs"]
[ext_resource type="Texture2D" uid="uid://bilmsco7apvqh" path="res://images/Shifu/Character_07-death_10.png" id="57_7d5uv"]
[ext_resource type="Texture2D" uid="uid://c2g6i1mwme26b" path="res://images/Shifu/Character_07-death_11.png" id="58_vd5ri"]
[ext_resource type="Texture2D" uid="uid://db5dfxdw41c30" path="res://images/Shifu/Character_07-death_12.png" id="59_oaye4"]
[ext_resource type="Texture2D" uid="uid://bba0fefvmecm" path="res://images/Shifu/Character_07-death_13.png" id="60_b6msv"]
[ext_resource type="Texture2D" uid="uid://bo07jvo4t7jxh" path="res://images/Shifu/Character_07-death_14.png" id="61_7xudo"]
[ext_resource type="Texture2D" uid="uid://5deutc7vk0ru" path="res://images/Shifu/Character_07-death_15.png" id="62_u6xyx"]
[ext_resource type="Texture2D" uid="uid://rve84lx2myki" path="res://images/Shifu/Character_07-death_16.png" id="63_08lrg"]
[ext_resource type="Texture2D" uid="uid://cmk6t0rymgka2" path="res://images/Shifu/Character_07-death_17.png" id="64_rwnrj"]
[ext_resource type="Texture2D" uid="uid://c87jn32nfenk3" path="res://images/Shifu/Character_07-death_18.png" id="65_bj4im"]
[ext_resource type="Texture2D" uid="uid://bodn7dlsmgb62" path="res://images/Shifu/Character_07-death_19.png" id="66_cigtq"]
[ext_resource type="Texture2D" uid="uid://2428eadl6dny" path="res://images/Shifu/Character_07-death_20.png" id="67_khldr"]
[ext_resource type="Texture2D" uid="uid://c67ffgjrd2uqb" path="res://images/Shifu/Character_07-death_21.png" id="68_yx6f1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_x8eun"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bupfb")
}, {
"duration": 1.0,
"texture": ExtResource("4_cx2p6")
}, {
"duration": 1.0,
"texture": ExtResource("5_i84tw")
}, {
"duration": 1.0,
"texture": ExtResource("6_0g5oy")
}, {
"duration": 1.0,
"texture": ExtResource("7_bwf1g")
}, {
"duration": 1.0,
"texture": ExtResource("8_c6t3f")
}, {
"duration": 1.0,
"texture": ExtResource("9_2vyft")
}, {
"duration": 1.0,
"texture": ExtResource("10_hvwnd")
}, {
"duration": 1.0,
"texture": ExtResource("11_bkhty")
}, {
"duration": 1.0,
"texture": ExtResource("12_qc5n2")
}, {
"duration": 1.0,
"texture": ExtResource("13_o5aik")
}, {
"duration": 1.0,
"texture": ExtResource("14_0w4aj")
}, {
"duration": 1.0,
"texture": ExtResource("15_xcs6a")
}, {
"duration": 1.0,
"texture": ExtResource("16_0hyc8")
}, {
"duration": 1.0,
"texture": ExtResource("17_063ww")
}, {
"duration": 1.0,
"texture": ExtResource("18_ayd77")
}, {
"duration": 1.0,
"texture": ExtResource("19_vilcq")
}, {
"duration": 1.0,
"texture": ExtResource("20_cwj26")
}, {
"duration": 1.0,
"texture": ExtResource("21_bj3d2")
}, {
"duration": 1.0,
"texture": ExtResource("22_8yr31")
}, {
"duration": 1.0,
"texture": ExtResource("23_1uwl2")
}, {
"duration": 1.0,
"texture": ExtResource("24_d0dwp")
}, {
"duration": 1.0,
"texture": ExtResource("25_6lnl3")
}, {
"duration": 1.0,
"texture": ExtResource("26_y2lf1")
}, {
"duration": 1.0,
"texture": ExtResource("27_nk822")
}, {
"duration": 1.0,
"texture": ExtResource("28_wxfcc")
}, {
"duration": 1.0,
"texture": ExtResource("29_lln0a")
}, {
"duration": 1.0,
"texture": ExtResource("30_fjjt7")
}, {
"duration": 1.0,
"texture": ExtResource("31_vluad")
}, {
"duration": 1.0,
"texture": ExtResource("32_u6gyv")
}, {
"duration": 1.0,
"texture": ExtResource("33_bnd3h")
}, {
"duration": 1.0,
"texture": ExtResource("34_afuob")
}, {
"duration": 1.0,
"texture": ExtResource("35_16e1h")
}, {
"duration": 1.0,
"texture": ExtResource("36_pyrpc")
}, {
"duration": 1.0,
"texture": ExtResource("37_ve4gf")
}, {
"duration": 1.0,
"texture": ExtResource("38_ap80e")
}, {
"duration": 1.0,
"texture": ExtResource("39_a64sk")
}, {
"duration": 1.0,
"texture": ExtResource("40_biuhv")
}, {
"duration": 1.0,
"texture": ExtResource("41_5jxax")
}, {
"duration": 1.0,
"texture": ExtResource("42_p15iw")
}, {
"duration": 1.0,
"texture": ExtResource("43_h1reu")
}, {
"duration": 1.0,
"texture": ExtResource("44_e6nk7")
}, {
"duration": 1.0,
"texture": ExtResource("45_nci8u")
}, {
"duration": 1.0,
"texture": ExtResource("46_mwerx")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bupfb")
}, {
"duration": 1.0,
"texture": ExtResource("47_sihbj")
}, {
"duration": 1.0,
"texture": ExtResource("48_82bgk")
}, {
"duration": 1.0,
"texture": ExtResource("49_fdsig")
}, {
"duration": 1.0,
"texture": ExtResource("50_5spoq")
}, {
"duration": 1.0,
"texture": ExtResource("51_o3xip")
}, {
"duration": 1.0,
"texture": ExtResource("52_mynug")
}, {
"duration": 1.0,
"texture": ExtResource("53_rq34w")
}, {
"duration": 1.0,
"texture": ExtResource("54_3r7kv")
}, {
"duration": 1.0,
"texture": ExtResource("55_p7v2j")
}, {
"duration": 1.0,
"texture": ExtResource("56_2s1vs")
}, {
"duration": 1.0,
"texture": ExtResource("57_7d5uv")
}, {
"duration": 1.0,
"texture": ExtResource("58_vd5ri")
}, {
"duration": 1.0,
"texture": ExtResource("59_oaye4")
}, {
"duration": 1.0,
"texture": ExtResource("60_b6msv")
}, {
"duration": 1.0,
"texture": ExtResource("61_7xudo")
}, {
"duration": 1.0,
"texture": ExtResource("62_u6xyx")
}, {
"duration": 1.0,
"texture": ExtResource("63_08lrg")
}, {
"duration": 1.0,
"texture": ExtResource("64_rwnrj")
}, {
"duration": 1.0,
"texture": ExtResource("65_bj4im")
}, {
"duration": 1.0,
"texture": ExtResource("66_cigtq")
}, {
"duration": 1.0,
"texture": ExtResource("67_khldr")
}, {
"duration": 1.0,
"texture": ExtResource("68_yx6f1")
}],
"loop": false,
"name": &"sleep",
"speed": 15.0
}]

[node name="win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bbyg0")

[node name="border1" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 5.0
offset_right = 8.0
offset_bottom = 648.0

[node name="border2" type="ColorRect" parent="border1"]
layout_mode = 0
offset_left = 1141.0
offset_top = -1.0
offset_right = 1150.0
offset_bottom = 642.0

[node name="border3" type="ColorRect" parent="border1"]
layout_mode = 0
offset_top = -3.0
offset_right = 1150.0
offset_bottom = 8.0

[node name="border4" type="ColorRect" parent="border1"]
layout_mode = 0
offset_left = 3.0
offset_top = 633.0
offset_right = 1149.0
offset_bottom = 643.0

[node name="bg" type="Sprite2D" parent="."]
modulate = Color(0.882353, 1, 0.870588, 1)
position = Vector2(574, 325.5)
scale = Vector2(0.7075, 0.694445)
texture = ExtResource("2_rwnn1")

[node name="menu" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 192.0
offset_top = 554.0
offset_right = 454.0
offset_bottom = 603.0

[node name="quit" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 693.0
offset_top = 554.0
offset_right = 955.0
offset_bottom = 603.0

[node name="shifu" type="AnimatedSprite2D" parent="."]
top_level = true
position = Vector2(560, 323)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_x8eun")
animation = &"sleep"
autoplay = "default"
frame = 22
frame_progress = 1.0

[node name="shifu_message" type="RichTextLabel" parent="shifu"]
offset_left = 228.0
offset_top = -338.0
offset_right = 1098.0
offset_bottom = 116.0

[node name="shifu_nextc" type="Timer" parent="."]

[node name="shifu_nextm" type="Timer" parent="."]

[node name="lighten" type="Timer" parent="."]

[node name="congratulations" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 274.0
offset_right = 1280.0
offset_bottom = 382.0
scale = Vector2(0.75, 0.75)
bbcode_enabled = true

[connection signal="mouse_entered" from="menu" to="." method="_on_restart_mouse_entered"]
[connection signal="mouse_exited" from="menu" to="." method="_on_restart_mouse_exited"]
[connection signal="pressed" from="menu" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="shifu_nextc" to="." method="_on_shifu_nextc_timeout"]
[connection signal="timeout" from="shifu_nextm" to="." method="_on_shifu_nextm_timeout"]
[connection signal="timeout" from="lighten" to="." method="_on_lighten_timeout"]
